deploy/k8s/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ramals-dev
  labels:
    app.kubernetes.io/part-of: ramals
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
